--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Eric Wakeman</h1>
-      <p>I'm <span class="typed" data-typed-items="Developer, Problem Solver, Creative, Diligent"></span></p>
+      <p><span class="typed" data-typed-items="Developer, Problem Solver, Creative, Diligent"></span></p>
     </div>
   </section><!-- End Hero -->
 
